gcc/testsuite/g++.dg/diagnostic/complex-invalid-1.C
__complex__ bool b;  // { dg-error "1:complex invalid" }
